# personal-agent-os

./: .coverage  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  HOW_TO_USE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dashboard/: package-lock.json  package.json
dashboard/.next/: trace
dashboard/.next/cache/: .tsbuildinfo
dashboard/.next/cache/webpack/client-development/: index.pack.gz.old
dashboard/.next/cache/webpack/client-production/: index.pack
dashboard/.next/cache/webpack/server-development/: index.pack.gz.old
dashboard/.next/cache/webpack/server-production/: index.pack
dashboard/.next/server/: server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
dashboard/.next/server/app/: page.js  page_client-reference-manifest.js
dashboard/.next/server/vendor-chunks/: @swc.js  lucide-react.js  next.js
dashboard/.next/static/chunks/: app-pages-internals.js  webpack.js
dashboard/.next/static/chunks/app/: layout.js  page.js
dashboard/.next/static/css/app/: layout.css
dashboard/.next/types/app/: layout.ts  page.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/lib/: api.ts
dex-cognitive-dashboard/: README.md  metadata.json
dex-cognitive-dashboard/src/: App.tsx  constants.ts  index.css  types.ts
dex-cognitive-dashboard/src/components/: ConsoleView.tsx  DashboardView.tsx  MemoryView.tsx  ModesView.tsx  NotesView.tsx  RemindersView.tsx  SettingsView.tsx  Sidebar.tsx  TelemetryView.tsx  TimelineView.tsx  TopNav.tsx
dex-cognitive-dashboard/src/lib/: api.ts
docs/: API_REFERENCE.md  ARCHITECTURE.md  SECURITY.md
src/agentic_os/: __init__.py  __main__.py  cli.py  config.py
src/agentic_os.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/agentic_os/api/: main.py
src/agentic_os/coordination/: __init__.py  bus.py  messages.py
src/agentic_os/core/: __init__.py  agents.py  executor.py  gemini_planner.py  memory.py  planner.py  planning.py  risk.py  state.py  telemetry.py  verifier.py
src/agentic_os/daemon/: __init__.py  reminder_monitor.py
src/agentic_os/discord/: __init__.py  bot.py  embed.py  logging.py
src/agentic_os/interoperability/: __init__.py
src/agentic_os/notifications/: __init__.py  base.py  desktop.py  discord.py  email_notifier.py  whatsapp_notifier.py
src/agentic_os/tools/: __init__.py  app_launcher.py  app_tools.py  base.py  chat.py  email_browser.py  file_operations.py  notes.py  reminders.py  shell_command.py  time_utils.py
src/dex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  test_skeleton.py
