[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dex"
version = "0.2.0"
description = "Dex - Your Personal AI Operator. Local-first, privacy-focused task automation."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Personal AI Systems", email = "dev@personalai.local"}
]
keywords = ["ai", "agents", "agentic-systems", "planning", "tools", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0.0",         # Type validation and schemas
    "pydantic-settings>=2.0.0", # Configuration management
    "loguru>=0.7.0",            # Structured logging
    "typing-extensions>=4.8.0", # Type hints backports
    "click>=8.1.0",             # CLI framework
    "rich>=13.0.0",             # Terminal formatting
    "python-dotenv>=1.0.0",     # Environment variable management
    "fastapi>=0.100.0",         # Web API
    "uvicorn>=0.23.0",          # ASGI server
]

[project.optional-dependencies]
llm = [
    "ollama>=0.1.0",            # Local LLM inference
    "transformers>=4.30.0",     # Hugging Face transformers
    "torch>=2.0.0",             # PyTorch for models
    "google-generativeai>=0.3.0", # Google Gemini API
    "sentence-transformers>=2.2.0", # Local embeddings
]
tools = [
    "google-auth>=2.25.0",      # Google API authentication
    "google-auth-oauthlib>=1.1.0",
    "google-api-python-client>=2.100.0",  # Gmail API
    "selenium>=4.15.0",         # Browser automation
    "pandas>=2.0.0",            # Dataset handling
]
vision = [
    "pillow>=10.0.0",           # Image processing
    "pytesseract>=0.3.10",      # OCR
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.10.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "ipython>=8.15.0",
]
all = [
    "agentic-os[llm,tools,vision,dev]"
]

[project.urls]
Homepage = "https://github.com/STiFLeR7/personal-agent-os"
Documentation = "https://github.com/STiFLeR7/personal-agent-os/blob/master/docs"
Repository = "https://github.com/STiFLeR7/personal-agent-os.git"
Issues = "https://github.com/STiFLeR7/personal-agent-os/issues"

[project.scripts]
dex = "agentic_os.cli:main"
agentic-os = "agentic_os.cli:main"  # Backward compatibility

[tool.setuptools]
packages = ["agentic_os"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "U", "C", "B", "A"]
ignore = ["E501", "W503"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/agentic_os --cov-report=term --cov-report=html"
asyncio_mode = "auto"
